Reduce method put into practice

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Solar System Practice</title>
+    <title>Reduce Method</title>
 </head>
 <body>
-    <section id="planets">
+    <section id="reduceMethod">
         
     </section>
-    <script src="/array-methods.js"></script>
+    <script src="/reduce.js"></script>
 </body>
 </html>
